--- a/src/app/components/cf/cf.component.html
+++ b/src/app/components/cf/cf.component.html
@@ -12,7 +12,7 @@
           <input class="searchResults" (keyup)="filter()" [(ngModel)]="terminoSearch" type="text" placeholder="Codigo o nombre del cliente">
         </div>
         <div class="nav-search nav-search-width-footer-and-nav-search">
-          <div  *ngIf="clientsFilter.length - 1 < 1" class="text-center" style="padding-top:40%">
+          <div  *ngIf="clientsFilter.length == 0" class="text-center" style="padding-top:40%">
             <label><br/><i class="fas fa-2x fa-spinner fa-spin" style="color:azure"></i></label>
           </div>
           <div *ngFor="let c of clientsFilter; let i = index" (click)="showClient(i)" class="searchTD" [ngClass]="{'select': selectClient && client.client == c.client}">
@@ -77,7 +77,7 @@
 
            <div class="row">
             <div class="col-md-2 col-sm-4">
-              <label class="big">Observaciones:</label>
+              <label class="big">Vendedor:</label>
             </div>
             <div class="col-md-10 col-sm-8">
               <div class="div-form"><textarea disabled [value]="client.observations" rows="3" style="width:96%"></textarea></div>  
@@ -87,7 +87,7 @@
 
           <div class="row" *ngFor="let phone of client.phones; let i = index">
             <div class="col-md-2  col-sm-4">
-              <label class="big">Telf:</label><label *ngIf="i == client.phones.length-1" (click)="addPhone()" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-plus-square fa-2x add"></i></label><label *ngIf="i <= client.phones.length-1 && client.phones.length-1 > 0" (click)="removePhone(i)" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-times fa-2x remove"></i></label>
+              <label class="big">Telf:</label><label *ngIf="i == client.phones.length-1 && client.phones.length-1 < 20" (click)="addPhone()" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-plus-square fa-2x add"></i></label><label *ngIf="i <= client.phones.length-1 && client.phones.length-1 > 0" (click)="removePhone(i)" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-times fa-2x remove"></i></label>
             </div>
             <div class="col-md-4 col-sm-8">
               <div class="div-form"><input type="text" disabled [value]="phone.number"></div>  
@@ -106,7 +106,7 @@
               <label class="big">Mail:</label>
             </div>
             <div class="col-md-10  col-sm-8" >
-              <div class="div-form"><input type="text" disabled [value]="email.email"><label (click)="addEmail()" data-toggle="modal" data-target="#exampleModal" *ngIf="i == client.emails.length-1"><i class="fas fa-plus-square fa-2x add"></i></label><label *ngIf="i <= client.emails.length-1 && client.emails.length-1 > 0" (click)="removeMail(i)" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-times fa-2x remove"></i></label></div>  
+              <div class="div-form"><input type="text" disabled [value]="email.email"><label (click)="addEmail()" data-toggle="modal" data-target="#exampleModal" *ngIf="i == client.emails.length-1 && client.emails.length-1 < 20"><i class="fas fa-plus-square fa-2x add"></i></label><label *ngIf="i <= client.emails.length-1 && client.emails.length-1 > 0" (click)="removeMail(i)" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-times fa-2x remove"></i></label></div>  
             </div>
           </div>
 
@@ -170,6 +170,7 @@
             </table>
             <div class="text-center" *ngIf="ordersShowLoading"><label ><i class="fas fa-4x fa-spinner fa-spin"></i></label></div>
           </div>
+          
           <div class="orderNew text-center" style="margin-top:10px; cursor:pointer"  [routerLink]="['/userAuthenticate','order','old',{q:true,id:client.client}]">
             <h4>Nuevo Pedido  <i class="fas fa-plus-square"></i></h4>
           </div>
@@ -444,7 +445,7 @@
                     <td>{{order.trace  | number:'1.1-2'}}</td>
                   </tr>
                   <tr *ngFor="let abono of order.abonos ">
-                    <td>Abono</td>
+                    <td>Pago</td>
                     <td>{{abono.created_at | date}}</td>
                     <td>{{abono.mount  | number:'1.1-2'}}</td>
                   </tr>
