--- a/src/app/components/delivery/delivery.component.html
+++ b/src/app/components/delivery/delivery.component.html
@@ -143,7 +143,7 @@
                   <div class="col-4"><input type="text" [value]="calculate(1)   | number:'1.1-2'" disabled ></div>
                 </div>
                 <div class="row">
-                  <div class="col-2 offset-md-4"><label>Abono</label></div>
+                  <div class="col-2 offset-md-4"><label>Pago</label></div>
                   <div class="col-4"><label><input type="text" formControlName="mount"></label></div>
                 </div>
                 <div class="row">
@@ -277,8 +277,11 @@
                 <div class="col-md-6 confirm">
                   <p>Cantidad: <b>{{order.quantity | number:'1.0'}}</b></p>
                 </div>
-                <div class="col-md-12 confirm">
+                <div class="col-md-6 confirm">
                   <p>Lados: <b>{{parseSides(order.sides)}}</b></p>
+                </div>
+                <div class="col-md-12 confirm">
+                  <p>Especificaciones: <b>{{order.specification}}</b></p>
                 </div>
               </div>
             </div>
