--- a/src/app/components/cf/cf.component.html
+++ b/src/app/components/cf/cf.component.html
@@ -140,7 +140,7 @@
           <div class="separator text-center">
             <p>Trabajos realizados</p>
           </div>
-          <div class="col-12 clientOrder" >
+          <div class="col-12 clientOrder table-responsive" >
             <table class="table table-striped table-dark table-bordered">
               <thead >
                 <tr>
@@ -155,7 +155,7 @@
                 </tr>
               </thead>
               <tbody class="thead-light">
-                <tr *ngFor="let order of orders; let i = index" class="trHover" (click)="showOrder(i)" data-toggle="modal" data-target="#Modal1">
+                <tr *ngFor="let order of orders; let i = index" class="trHover" (click)="showOrder(i)" href="#" data-toggle="modal" data-target="#Modal1">
                   <td class="content"><h1>{{parseStatus(i)}}</h1></td>
                   <td class="content"><h1>{{order.branch.name}}</h1></td>
                   <td class="content"><h1>{{order.product}}</h1></td>
@@ -381,6 +381,9 @@
                   <p>Espacios: <b>{{order.spaces}}</b></p>
                 </div>
                 <div class="col-md-6 confirm">
+                  <p>Lados: <b>{{parseSides(order.sides)}}</b></p>
+                </div>
+                <div class="col-md-6 confirm">
                   <p>Diseño: <b>{{parseDesign(order.design)}}</b></p>
                 </div>
                 <div class="col-md-6 confirm">
@@ -463,8 +466,8 @@
                     <th>Fecha</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr *ngFor="let status of order.status_order">
+                <tbody *ngFor="let status of order.status_order; let i = index">
+                  <tr *ngIf="i > 0">
                     <td>{{status.user.name}}</td>
                     <td>{{parseStatusLog(status.status)}}</td>
                     <td>{{status.created_at | date}}</td>
