--- a/src/app/components/delivery/delivery.component.html
+++ b/src/app/components/delivery/delivery.component.html
@@ -54,49 +54,51 @@
   </div> 
 
   <div *ngIf="orders.length === 0" class="text-center"><h4>No existen pedidos asociados al estado "Entrega y cobros".</h4></div>
-  <table class="table  table-hover" *ngIf="orders.length != 0">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">N° cliente</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">Sucursal</th>
-        <th scope="col">N° pedido</th>
-        <th scope="col">Nombre del contacto</th>
-        <th scope="col">Producto</th>
-        <th scope="col">Cantidad</th>
-        <th scope="col">Tiempo de entrega</th>
-        <th scope="col">Modo de envío</th>
-        <th scope="col">Deuda</th>
-        <th scope="col">Modo de pago</th>
-        <th scope="col">Opciónes</th>
-      </tr>
-    </thead>
-    <tbody *ngIf="orders.length >= 1">
-      <tr *ngFor="let order of orders; let i = index" class="fadeInAnimated" style="cursor:pointer">
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.id}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.name}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.name}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.id}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.name_contact}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.product}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.quantity  | number:'1.0'}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.date_delivery | date}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.description_send}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">${{calculateForIndex(i,"normal")  | number:'1.1-2'}}</td>
-        <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.method_payment}}</td>
-        <td>
-          <a [href]="_http.getUrl()+'pdf/delivery/'+order.id" target="_blank">
-            <button type="button" class="btn" title="Imprimir">
-              <i class="fas fa-print"></i>
+  <div class="table-responsive">
+    <table class="table  table-hover" *ngIf="orders.length != 0">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">N° cliente</th>
+          <th scope="col">Cliente</th>
+          <th scope="col">Sucursal</th>
+          <th scope="col">N° pedido</th>
+          <th scope="col">Nombre del contacto</th>
+          <th scope="col">Producto</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Tiempo de entrega</th>
+          <th scope="col">Modo de envío</th>
+          <th scope="col">Deuda</th>
+          <th scope="col">Modo de pago</th>
+          <th scope="col">Opciónes</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="orders.length >= 1">
+        <tr *ngFor="let order of orders; let i = index" class="fadeInAnimated" style="cursor:pointer">
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.id}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.name}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.name}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.id}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.branch.client.name_contact}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.product}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.quantity  | number:'1.0'}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.date_delivery | date}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.description_send}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">${{calculateForIndex(i,"normal")  | number:'1.1-2'}}</td>
+          <td data-toggle="modal" data-target="#exampleModal2" (click)="selectOrder(i,'normal')">{{order.method_payment}}</td>
+          <td>
+            <a [href]="_http.getUrl()+'pdf/delivery/'+order.id" target="_blank">
+              <button type="button" class="btn" title="Imprimir">
+                <i class="fas fa-print"></i>
+              </button>
+            </a>
+            <button type="button" class="btn" data-toggle="modal" data-target="#exampleModal" title="Entregar" (click)="selectOrder(i,'normal')">
+              <i class="fas fa-truck"></i>
             </button>
-          </a>
-          <button type="button" class="btn" data-toggle="modal" data-target="#exampleModal" title="Entregar" (click)="selectOrder(i,'normal')">
-            <i class="fas fa-truck"></i>
-          </button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
     
    <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -218,10 +220,10 @@
                 <p>Fecha de pedido: <b>{{order.created_at | date}}</b></p>
               </div>
               <div class="col-md-12">
-                <p>Fecha de diseño: <b>{{order.status_order[2].updated_at | date}}</b></p>
+                <p>Fecha de diseño: <b *ngIf="order.status_order.length >= 2">{{order.status_order[2].updated_at | date}}</b></p>
               </div>
               <div class="col-md-12">
-                <p>Fecha de impresión: <b>{{order.status_order[3].updated_at | date}}</b></p>
+                <p>Fecha de impresión: <b *ngIf="order.status_order.length >= 3">{{order.status_order[3].updated_at | date}}</b></p>
               </div>
               <div class="col-md-12">
                 <p>Fecha de entrega: <b>{{order.date_delivery | date}}</b></p>
@@ -311,6 +313,9 @@
                 </div>
                 <div class="col-md-6 confirm">
                   <p>Total: <b>${{calculateTotalShow() | number:'1.1-2'}}</b></p>
+                </div>
+                <div class="col-md-6 confirm">
+                  <p>Pagos: <b>${{calculateAbonos() | number:'1.1-2'}}</b></p>
                 </div>
                 <div class="col-md-6 confirm">
                   <p>Deuda: <b>${{calculate(1) | number:'1.1-2'}}</b></p>
