--- a/src/app/components/design/design.component.html
+++ b/src/app/components/design/design.component.html
@@ -7,37 +7,40 @@
   </div>
   
   <div *ngIf="orders.length == 0" class="text-center"><h4>No existen ordenes asociadas al estado "diseño".</h4></div>
-  <table class="table  table-hover" *ngIf="orders.length != 0">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">N° cliente</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">N° Pedido</th>
-        <th scope="col">Sucursal</th>
-        <th scope="col">Producto</th>
-        <th scope="col">Gramage</th>
-        <th scope="col">Entrega</th>
-        <th scope="col">Tamaño</th>
-        <th scope="col">Espacios</th>
-        <th scope="col">Diseño</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let order of orders; let i = index" class="fadeInAnimated" style="cursor:pointer" data-toggle="modal" data-target="#exampleModal" (click)="selectOrder(i)">
-        <th scope="row">{{order.branch.client.id}}</th>
-        <td>{{order.branch.client.name}}</td>
-        <td>{{order.id}}</td>
-        <td>{{order.branch.name}}</td>
-        <td>{{order.product}}</td>
-        <td>{{order.garnet}}</td>
-        <td *ngIf="order.special_time == '1'">{{order.date_delivery | date}}</td>
-        <td *ngIf="order.special_time == '0'">{{order.time_delivery / 7}} Semana(s)</td>
-        <td>{{order.size}}</td>
-        <td>{{order.spaces}}</td>
-        <td>{{parseDesign(order.design)}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table class="table  table-hover" *ngIf="orders.length != 0">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">N° cliente</th>
+          <th scope="col">Cliente</th>
+          <th scope="col">N° Pedido</th>
+          <th scope="col">Sucursal</th>
+          <th scope="col">Producto</th>
+          <th scope="col">Gramage</th>
+          <th scope="col">Entrega</th>
+          <th scope="col">Tamaño</th>
+          <th scope="col">Espacios</th>
+          <th scope="col">Diseño</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of orders; let i = index" class="fadeInAnimated" style="cursor:pointer" data-toggle="modal" data-target="#exampleModal" (click)="selectOrder(i)">
+          <th scope="row">{{order.branch.client.id}}</th>
+          <td>{{order.branch.client.name}}</td>
+          <td>{{order.id}}</td>
+          <td>{{order.branch.name}}</td>
+          <td>{{order.product}}</td>
+          <td>{{order.garnet}}</td>
+          <td *ngIf="order.special_time == '1'">{{order.date_delivery | date}}</td>
+          <td *ngIf="order.special_time == '0'">{{order.time_delivery / 7}} Semana(s)</td>
+          <td>{{order.size}}</td>
+          <td>{{order.spaces}}</td>
+          <td>{{parseDesign(order.design)}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
 
 
     <!-- Modal -->
