--- a/src/app/components/in/in.component.html
+++ b/src/app/components/in/in.component.html
@@ -9,62 +9,63 @@
       <h4 class="title">Ingresos</h4>
     </div>
   </div>
-  <table class="table  table-hover">
-    <thead class="thead-dark">
-      <tr class="text-center max-width">
-        <th scope="col" colspan="5"><p>Seleccione el rango de fecha</p></th>
-        <th scope="col" colspan="5">
-          Desde <input [(ngModel)]="desde" name="desde" type="date" style="background:white;color:black;border:none">
-          Hasta <input [(ngModel)]="hasta" [min]="desde" name="hasta" type="date" style="background:white;color:black;border:none">
-          <button (click)="searchsOrdersDate()">Buscar</button>
-          <button type="button" *ngIf="desde != undefined && hasta != undefined" title="Imprimir" data-toggle="modal" data-target="#exampleModal">Imprimir</button>
-        </th>
-      </tr>
-      <tr class="text-center min-width">
-        <th scope="col" colspan="10"><p>Seleccione el rango de fecha</p></th>
-      </tr>
-      <tr class="text-center min-width">
-        <th scope="col" colspan="10">
-          Desde <input [(ngModel)]="desde" name="desde" type="date" style="background:white;color:black;border:none">
-          Hasta <input [(ngModel)]="hasta" [min]="desde" name="hasta" type="date" style="background:white;color:black;border:none">
-          <button (click)="searchsOrdersDate()">Buscar</button>
-          <button type="button" *ngIf="desde != undefined && hasta != undefined" title="Imprimir" data-toggle="modal" data-target="#exampleModal">Imprimir</button>
-        </th>
-      </tr>
-      <tr>
-        <th scope="col">Fecha</th>
-        <th scope="col">N° de cliente</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">N° de pedido</th>
-        <th scope="col">Sucursal</th>
-        <th scope="col">Producto</th>
-        <th scope="col">Cantidad</th>
-        <th scope="col">Monto</th>
-        <th scope="col">Tipo</th>
-        <th scope="col">Medio de pago</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let order of payments; let i = index">
-        <td>{{order.date_sell.date | date}}</td>
-        <td>{{order.branch.client.id}}</td>
-        <td>{{order.branch.client.name}}</td>
-        <td>{{order.id}}</td>
-        <td>{{order.branch.name}}</td>
-        <td>{{order.product}}</td>
-        <td>{{order.quantity | number:'1.0'}}</td>
-        <td>{{payment(i)  | number:'3.1-2'}}</td>
-        <td>{{paymentWhere(i)}}</td>
-        <td *ngIf="!order.abono">{{order.method_payment}}</td>
-        <td *ngIf="order.abono">{{order.abono.method_payment}}</td>
-      </tr>
-      <tr class="text-center" style="background:#212529; color:white">
-        <td colspan="5">Total ingresos</td>
-        <td colspan="5">${{total()  | number:'3.1-2'}}</td>
-      </tr>
-    </tbody>
-  </table>
-
+  <div class="table-responsive">
+    <table class="table  table-hover">
+      <thead class="thead-dark">
+        <tr class="text-center max-width">
+          <th scope="col" colspan="5"><p>Seleccione el rango de fecha</p></th>
+          <th scope="col" colspan="5">
+            Desde <input [(ngModel)]="desde" name="desde" type="date" style="background:white;color:black;border:none">
+            Hasta <input [(ngModel)]="hasta" [min]="desde" name="hasta" type="date" style="background:white;color:black;border:none">
+            <button (click)="searchsOrdersDate()">Buscar</button>
+            <button type="button" *ngIf="desde != undefined && hasta != undefined" title="Imprimir" data-toggle="modal" data-target="#exampleModal">Imprimir</button>
+          </th>
+        </tr>
+        <tr class="text-center min-width">
+          <th scope="col" colspan="10"><p>Seleccione el rango de fecha</p></th>
+        </tr>
+        <tr class="text-center min-width">
+          <th scope="col" colspan="10">
+            Desde <input [(ngModel)]="desde" name="desde" type="date" style="background:white;color:black;border:none">
+            Hasta <input [(ngModel)]="hasta" [min]="desde" name="hasta" type="date" style="background:white;color:black;border:none">
+            <button (click)="searchsOrdersDate()">Buscar</button>
+            <button type="button" *ngIf="desde != undefined && hasta != undefined" title="Imprimir" data-toggle="modal" data-target="#exampleModal">Imprimir</button>
+          </th>
+        </tr>
+        <tr>
+          <th scope="col">Fecha</th>
+          <th scope="col">N° de cliente</th>
+          <th scope="col">Cliente</th>
+          <th scope="col">N° de pedido</th>
+          <th scope="col">Sucursal</th>
+          <th scope="col">Producto</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Monto</th>
+          <th scope="col">Tipo</th>
+          <th scope="col">Medio de pago</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of payments; let i = index">
+          <td>{{order.date_sell.date | date}}</td>
+          <td>{{order.branch.client.id}}</td>
+          <td>{{order.branch.client.name}}</td>
+          <td>{{order.id}}</td>
+          <td>{{order.branch.name}}</td>
+          <td>{{order.product}}</td>
+          <td>{{order.quantity | number:'1.0'}}</td>
+          <td>{{payment(i)  | number:'1.1-2'}}</td>
+          <td>{{paymentWhere(i)}}</td>
+          <td *ngIf="!order.abono">{{order.method_payment}}</td>
+          <td *ngIf="order.abono">{{order.abono.method_payment}}</td>
+        </tr>
+        <tr class="text-center" style="background:#212529; color:white">
+          <td colspan="5">Total ingresos</td>
+          <td colspan="5">${{total()  | number:'1.1-2'}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <!-- Modal -->
